<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/taskYellow"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/task_details_background"

        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="10dp">


        <RelativeLayout
            android:id="@+id/rltitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingBottom="12dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:text="@string/task_title"
                style="@style/TaskDetailsTitle"
                android:layout_toLeftOf="@+id/task_priority_rl"/>


            <RelativeLayout
                android:id="@+id/task_priority_rl"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/circle_background">

                <TextView
                    android:id="@+id/task_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"


                    android:text="@string/task_priority"
                    style="@style/TaskDetailsPriority" />

            </RelativeLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"

            />


        <RelativeLayout
            android:id="@+id/rllabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/task_due_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"


                android:text="@string/due_date"
                style="@style/TaskDateLable" />

            <TextView
                android:id="@+id/task_days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"


                android:text="@string/days_left"
                style="@style/TaskDateLable"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rldate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/task_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"


                android:text="@string/date"
                style="@style/TaskDetailsDate" />

            <TextView
                android:id="@+id/task_days_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:text="@string/days_left"
                style="@style/TaskDetailsDate" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"

            />

        <TextView
            android:id="@+id/task_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:text="@string/task_description"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"

            />

        <TextView
            android:id="@+id/task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:paddingBottom="10dp"

            android:paddingTop="7dp"
            android:text="@string/status"
            style="@style/TaskDetailsStatus"
            />

    </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/task_details_bg_top"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"

            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"

            android:scaleType="fitXY"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/task_resolve_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"

        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"

        android:paddingTop="@dimen/activity_horizontal_margin"
        android:visibility="gone">
        <Button
            android:id="@+id/task_resolve_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginRight="5dp"

            android:background="@drawable/resolve_bt_background"
            android:text="@string/resolve"
            style="@style/TaskDetailsButton">
        </Button>
        <Button
            android:id="@+id/task_cntresolve_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"

            android:background="@drawable/cntresolve_bt_background"
            android:text="@string/cntresolve"
            style="@style/TaskDetailsButton">
        </Button>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/task_status_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@mipmap/resolved_sign"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
    </RelativeLayout>
</LinearLayout>