<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="@dimen/task_listitem_minheight"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rltitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="7dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:text="@string/task_title"
                android:textColor="@color/taskRed"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_toLeftOf="@id/task_priority_rl"/>

            <RelativeLayout
                android:id="@+id/task_priority_rl"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/circle_background">

                <TextView
                    android:id="@+id/task_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"


                    android:text="@string/task_priority"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"

            />

        <RelativeLayout
            android:id="@+id/rllabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="10dp">

            <TextView
                android:id="@+id/task_due_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/due_date"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/task_days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/days_left"
                android:textColor="@android:color/black"
                android:textSize="10sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rldate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:paddingTop="7dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/task_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:text="@string/date"
                android:textColor="@color/taskRed"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/task_days_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:text="@string/days_left"
                android:textColor="@color/taskRed"
                android:textSize="15sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>